Update MainActivity and create SagittarioApplication

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="edu.illinois.cs125.sagittario.sagittario">
 
     <application
+        android:name=".SagittarioApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -16,6 +17,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".MinesweeperActivity"
+            android:label="@string/title_activity_minesweeper"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
